--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -39,7 +39,7 @@
 		\vspace*{-1cm}
 		\mbox{
 	  		\parbox{4cm}{
-				\resizebox{4cm}{!}{\input{cernlogo}}
+				\resizebox{4cm}{!}{\input{figures/cernlogo}}
 	  		}
 	  		\parbox{9cm}{
 	    			%\LARGE CERN\\
@@ -53,7 +53,7 @@
 		\huge The CernVM File System\\
 		\HRule\\[1.5cm]
 		
-		\includegraphics[height=4cm]{cvmfs}\\[1.5cm]
+		\includegraphics[height=4cm]{figures/cvmfs}\\[1.5cm]
   
 		\large Jakob Blomer \qquad Predrag Buncic\\[0.4cm]
 		%\today
