--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -6,7 +6,7 @@ Most of those libraries are shipped with the \cvmfs\ tarball and can be linked s
 
 \begin{figure}
 	\begin{center}
-		\input{cvmfs-blocks}
+		\input{figures/cvmfs-blocks}
 	\end{center}
 	\caption{\cvmfs\ block diagram.}
 	\label{fig:cvmfsblocks}
@@ -72,7 +72,7 @@ A reasonable approach is to store separate software versions as separate nested 
 Figure~\ref{fig:nested} shows the directory structure which we use for the ATLAS repository.
 \begin{figure}
 	\begin{center}
-		\framebox{\input{nestedcatalogs}}
+		\framebox{\input{figures/nestedcatalogs}}
 	\end{center}
 	\caption{Directory structure useds for the ATLAS repository.}
 	\label{fig:nested}
@@ -128,7 +128,7 @@ As crypto engine, \cvmfs\ use \product{libcrypto} from the \product{OpenSSL} pro
 Figure~\ref{fig:security} shows the trust chain with a signed repository.
 \begin{figure}
 	\begin{center}
-		\input{security}
+		\input{figures/security}
 	\end{center}
 	\caption{Trust chain with a signed repository.}
 	\label{fig:security}
@@ -191,7 +191,7 @@ This way, overhead ideally drops to just round trip time for a single HTTP GET.
 The impact of the keep-alive feature is shown in Figure~\ref{fig:keepalive}.
 \begin{figure}
 	\begin{center}
-		\resizebox{0.5\linewidth}{!}{\input{cvmfs-keepalive}}
+		\resizebox{0.5\linewidth}{!}{\input{figures/cvmfs-keepalive}}
 	\end{center}
 	\caption{Impact of keep-alive header on multiple file downloads.}
 	\label{fig:keepalive}
@@ -456,7 +456,7 @@ We refer to such VFS calls as \newterm{writing calls}.
 
 \begin{figure}
 	\begin{center}
-		\input{vfsfilter}
+		\input{figures/vfsfilter}
 	\end{center}
 	\caption{\cvmfs\ filter for \redirfs: Writing VFS calls are captured and written to a character device to create a file system change log.}
 	\label{fig:cvmfsflt}
