--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -13,7 +13,7 @@ Figure~\ref{fig:installwebserver} outlines the repository generation.
 
 \begin{figure}
 	\begin{center}
-		\input{install.tex}
+		\input{figures/install.tex}
 	\end{center}
 	\caption{Converting a shadow tree into a repository. The file catalog contains the directory structure as well as file metadata, symbolic links, and secure hash keys of regular files. Regular files are compressed and renamed to their cryptographic content hash before copied into the data store.}
 	\label{fig:installwebserver}
