--- a/figures/concept-generic.tex
+++ b/figures/concept-generic.tex
@@ -73,7 +73,7 @@
 	\node[scale=0.3,circuit logic US,or gate,fill,httpdcolor,rotate=90] (connxmpp) at ($(context.north)+(0,4.5pt)$) {};
 	\node[httpdcolor,anchor=south,yshift=1ex,key] at (connxmpp.north) {\parbox{3cm}{\centering XMPP\\HTTP (Amazon EC2)}};
 	\node[scale=0.3,circuit logic US,or gate,fill,httpdcolor,rotate=180] (conniso) at ($(context.west)-(4.5pt,0)$) {};
-	\node[httpdcolor,anchor=east,xshift=-1ex,key] at (conniso.west) {\includegraphics[height=1cm]{cdrom-orange}};
+	\node[httpdcolor,anchor=east,xshift=-1ex,key] at (conniso.west) {\includegraphics[height=1cm]{figures/cdrom-orange}};
 	%\fill[httpdcolor] ($(context.north)+(0,3pt)$) circle (3pt) node[above,anchor=south,yshift=1ex,key] {\parbox{3cm}{\centering XMPP\\HTTP (Amazon EC2)}};
 	%\fill[httpdcolor] ($(context.west)-(3pt,0)$) circle (3pt) node[left,anchor=east,xshift=-1ex,key] {\includegraphics[height=1cm]{cdrom}};
 	
@@ -82,9 +82,9 @@
 	\node[fuse,minimum width=\cvmfsWd cm,minimum height=\fuseHt cm,xshift=\fuseX cm,yshift= \fuseY cm] (fuse) at (0,0) {Fuse};
 	
 	\begin{scope}[xshift=12cm, yshift=-1cm]
-		\node[httpd] (webserver) at (0,0) {\includegraphics[width=2.5cm]{webserver}};
+		\node[httpd] (webserver) at (0,0) {\includegraphics[width=2.5cm]{figures/webserver}};
 		\node[shape=cylinder,draw=backcolor,thick,shape border rotate=90,xshift=1.25cm,yshift=-0.25cm,minimum width=1.2cm,fill=backcolor,fill opacity=0.5] at (0,0) {};
-		\node[anchor=south] (releasemgr) at ($(webserver.north)+(0,1.25cm)$) {\includegraphics[width=1cm]{releasemanager}};
+		\node[anchor=south] (releasemgr) at ($(webserver.north)+(0,1.25cm)$) {\includegraphics[width=1cm]{figures/releasemanager}};
 		\draw[very thick,backcolor,->] (releasemgr.south) to node[anchor=center,fill=white,midway] {\textcolor{black}{ssh}} (webserver.north);
 	\end{scope}
 	
