--- a/figures/security.tex
+++ b/figures/security.tex
@@ -4,14 +4,14 @@
 	[block/.style={node distance=1cm,rounded corners,draw,minimum height=0.7cm,minimum width=3cm},
 	 fig/.style={}]
 	
-	\node[fig,gray] (release manager) at (6cm,0cm) {\parbox{2cm}{\centering release\\\includegraphics[width=1.25cm]{releasemanager}\\manager}};
-	\node[fig,gray,anchor=north] (whitelist) at (0cm,-2cm) {\parbox{3cm}{\centering \parbox[top][2cm][c]{2.5cm}{\includegraphics[width=2.5cm]{cernvm}}\\certificate white-list}};
-	\node[fig,gray,anchor=north] (web server) at (12cm,-2cm) {\parbox{3cm}{\centering \parbox[top][2cm][c]{2.5cm}{\includegraphics[width=2cm]{webserver}}\\repository}};
+	\node[fig,gray] (release manager) at (6cm,0cm) {\parbox{2cm}{\centering release\\\includegraphics[width=1.25cm]{figures/releasemanager}\\manager}};
+	\node[fig,gray,anchor=north] (whitelist) at (0cm,-2cm) {\parbox{3cm}{\centering \parbox[top][2cm][c]{2.5cm}{\includegraphics[width=2.5cm]{figures/cernvm}}\\certificate white-list}};
+	\node[fig,gray,anchor=north] (web server) at (12cm,-2cm) {\parbox{3cm}{\centering \parbox[top][2cm][c]{2.5cm}{\includegraphics[width=2cm]{figures/webserver}}\\repository}};
 	\node[block,green!50!black,very thick] (cvmfs) at (6cm,-9cm) {\parbox{3.5cm}{\centering{\scshape CernVM-FS +\\CernVM} public key}};
 	
-	\draw[->,gray,very thick] (release manager.west) -- node[gray,fill=white] {\parbox{2cm}{\centering\includegraphics[width=1cm]{fingerprint}\\ fingerprint}} (whitelist.north);
-	\draw[->,gray,very thick] (release manager.east) -- node[gray,fill=white] {\parbox{2cm}{\centering\includegraphics[width=1cm]{sign-cert}\\ sign catalog}} (web server.north);
-	\draw[->,gray,very thick] (whitelist.east) -- node[white,fill] {\parbox{2cm}{\centering\includegraphics[width=1cm]{sign}\\ \textcolor{gray}{sign whitelist}}} ($(whitelist.east) + (8.75,0)$);
+	\draw[->,gray,very thick] (release manager.west) -- node[gray,fill=white] {\parbox{2cm}{\centering\includegraphics[width=1cm]{figures/fingerprint}\\ fingerprint}} (whitelist.north);
+	\draw[->,gray,very thick] (release manager.east) -- node[gray,fill=white] {\parbox{2cm}{\centering\includegraphics[width=1cm]{figures/sign-cert}\\ sign catalog}} (web server.north);
+	\draw[->,gray,very thick] (whitelist.east) -- node[white,fill] {\parbox{2cm}{\centering\includegraphics[width=1cm]{figures/sign}\\ \textcolor{gray}{sign whitelist}}} ($(whitelist.east) + (8.75,0)$);
 	
 	\draw[->,very thick,blue!75,curve to,out=200,in=90] (web server.south west) to node[blue!75,fill=white] {\parbox{3cm}{\centering {\tikz \node[fill,draw,circle,inner sep=1pt]{\textcolor{white}1};}\\download\\signed catalog +\\signed whitelist}} (cvmfs.north);
 	\node[blue!75,above left=of cvmfs,xshift=0.75cm,yshift=-0.75cm] {\parbox{3cm}{\centering {\tikz \node[fill,draw,circle,inner sep=1pt]{\textcolor{white}2};}\\verify whitelist +\\check fingerprint}};
