revised overview chapter

--- a/cpt-configure.tex
+++ b/cpt-configure.tex
@@ -1,4 +1,4 @@
-\chapter{Installation from Sources}
+\chapter{Client Configuration}
 \label{sct:install}
 This section describes how to manually install the \cvmfs\ client from the source tarball.
 Current versions are available from \url{https://cernvm.cern.ch/portal/downloads}.
