--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,14 @@
 
+@techreport{unionfs04,
+        Author = {Charles P. Wright and Jay Dave and Puja Gupta and Harikesavan Krishnan and Erez Zadok and Mohammad Nayyer Zubair},
+        Date-Added = {2011-10-17 17:17:03 +0200},
+        Date-Modified = {2011-10-17 17:18:42 +0200},
+        Institution = {Stony Brook University},
+        Number = {FSL-04-01b},
+        Title = {Versatility and Unix Semantics in a Fan-Out Unification File System},
+        Year = {2004},
+}
+
 @misc{fuse,
 	Author = {Csaba Henk and Miklos Szeredi},
 	Howpublished = {\url{http://fuse.sourceforge.net}},
