--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -13,6 +13,10 @@
 \providecommand{\redirfs}{{\scshape redirfs}}
 \providecommand{\nfs}{{\scshape nfs}}
 \providecommand{\afs}{{\scshape AFS}}
+\providecommand{\rpm}{{\scshape rpm}}
+\providecommand{\dpkg}{{\scshape dpkg}}
+\providecommand{\yum}{{\scshape yum}}
+\providecommand{\cmake}{{\scshape cmake}}
 \providecommand{\cernvmfs}{{\scshape CernVM File System}}
 \providecommand{\zep}{{\scshape zeppelin}}
 \providecommand{\scvmfs}{{{\itshape\scshape s}\scshape cvmfs}}
@@ -99,23 +103,23 @@
 
 \include{cpt-overview}
 
-%\include{cpt-quickstart}
+\include{cpt-quickstart}
 
-%\include{cpt-configure}
+\include{cpt-configure}
 
-%\include{cpt-squid}
+\include{cpt-squid}
 
-%\include{cpt-replica}
+\include{cpt-replica}
 
-%\include{cpt-repo}
+\include{cpt-repo}
 
-%\include{cpt-details}
+\include{cpt-details}
 
 %\chapter{Sample Infrastructure Setup}
 
 \appendix
 %\include{apx-releasemgr}
-%\include{apx-rpms}
+\include{apx-rpms}
 
 \pagestyle{plain}
 \bibliographystyle{alpha}
