--- a/packages.tex
+++ b/packages.tex
@@ -48,7 +48,7 @@
 \usepackage{multicol}
 \usepackage{multirow}
 
-\usepackage{slashbox} % Diagonal cells
+%\usepackage{slashbox} % Diagonal cells
 \usepackage{booktabs}
 \usepackage{rotating}
 
