--- a/packages.tex
+++ b/packages.tex
@@ -68,7 +68,7 @@
 % Math
 %--------
 \usepackage{amsmath,amssymb,amstext,amsthm,amsfonts}
-\usepackage{dsfont} %Font for nice set symbols (R, N, Z, ...)
+%\usepackage{dsfont} %Font for nice set symbols (R, N, Z, ...)
 \usepackage{nicefrac} %"Marktfrauenbruch"
 % Set symbols
 \newcommand{\R}{\ensuremath{\mathds{R}}}
