--- a/cpt-quickstart.tex
+++ b/cpt-quickstart.tex
@@ -8,88 +8,111 @@ This section describes how to install the \cvmfs\ client.
 The \cvmfs\ source code and binary packages are available under \url{https://cernvm.cern.ch/portal/downloads}.
 Binary packages are produced for \rpm, \dpkg, and Mac OS X (.pkg).
 \yum\ repositories for \SI{64}{\bit} and \SI{32}{\bit} Scientific Linux 5 and 6 are available under \url{http://cvmrepo.web.cern.ch/cvmrepo/yum}.
-The \texttt{cvmfs-release} packages can be used to add a \cvmfs\ repository to the local \yum\ installation.
+The \texttt{cvmfs-release} packages can be used to add a these \yum\ repositories to the local \yum\ installation.
 The \texttt{cvmfs-release} packages are available under \url{https://cernvm.cern.ch/portal/downloads}.
 
 The \cvmfs\ client is not relocatable and needs to be installed under /usr.
-In order to compiling from sources, use the following \cmake\ command:
+In order to compile and install from sources, use the following \cmake\ command:
 \begin{verbatim}
   cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr .
+  make
+  sudo make install
 \end{verbatim}
 
-
 \section{Installation}
+\subsection{Linux}
 To install, proceed according to the following steps:
 \begin{description}
-	\item[Step 1] Install the CernVM-FS packages.  With yum, run 
-					\begin{lstlisting}[language=bash]
-yum install cvmfs-keys cvmfs cvmfs-init-scripts.
-					\end{lstlisting}
-			      If yum does not show the latest packages, clean the yum cache by \lstinline{yum clean all}.
-			      Use \lstinline{rpm -vi} to install the packages using just rpm.
-    \item[Step 2] For the base setup, run \lstinline{cvmfs_config setup}.
+	\item[Step 1] Install the \cvmfs\ packages.  With yum, run
+\begin{verbatim}
+  yum install cvmfs-keys cvmfs cvmfs-init-scripts.
+\end{verbatim}
+			      If yum does not show the latest packages, clean the yum cache by \texttt{yum clean all}.
+			      Use \texttt{rpm -vi} to install the packages using just \rpm.
+			      On Ubuntu, use \texttt{dpkg -i} on the cvmfs .deb package.
+    \item[Step 2] For the base setup, run \texttt{cvmfs\_config setup}.
     				Alternatively, you can do the base setup by hand: ensure that \texttt{user\_allow\_other} is set in /etc/fuse.conf and ensure that \texttt{/cvmfs /etc/auto.cvmfs} is set in /etc/auto.master.
-					If you migrate from a previous version of \cvmfs, see the release notes if there is anything special to do for migration.
-	\item[Step 3] Create \texttt{/etc/cvmfs/default.local} and open the file for editing.
-	\item[Step 4] Select the desired repositories by setting \lstinline{CVMFS_REPOSITORIES=repo1,repo2,...}.
+					If you migrate from a previous version of \cvmfs, check the release notes if there is anything special to do for migration.
+	\item[Step 3] Create /etc/cvmfs/default.local and open the file for editing.
+	\item[Step 4] Select the desired repositories by setting \texttt{CVMFS\_REPOSITORIES=repo1,repo2,...}.
 		For ATLAS, for instance, set 
-		\begin{lstlisting}[language=bash]
-CVMFS_REPOSITORIES=atlas.cern.ch,atlas-condb.cern.ch,grid.cern.ch
-		\end{lstlisting}
+\begin{verbatim}
+  CVMFS_REPOSITORIES=atlas.cern.ch,atlas-condb.cern.ch,grid.cern.ch
+\end{verbatim}
 		Specify the HTTP proxy servers on your site with
-		\begin{lstlisting}[language=bash]
-CVMFS_HTTP_PROXY="http://myproxy1:port|http://myproxy2:port"
-		\end{lstlisting}
+\begin{verbatim}
+  CVMFS_HTTP_PROXY="http://myproxy1:port|http://myproxy2:port"
+\end{verbatim}
 		For the syntax of more complex HTTP proxy settings, see Section~\ref{sct:proxies}.
 		Make sure your local Squid servers allow access to all the Stratum 1 web servers~\ref{sct:squid}.
 		For Cern repositories, the Stratum 1 web servers are listed in /etc/cvmfs/domain.d/cern.ch.conf.
-	\item[Step 5] Restart the cvmfs service by \lstinline{service cvmfs restart}.
-	\item[Step 6] Check if \cvmfs\ mounts the specified repositories by \lstinline{service cvmfs probe}.
+	\item[Step 5] Check if \cvmfs\ mounts the specified repositories by \texttt{cvmfs\_config probe}.
+\end{description}
+
+\subsection{Mac OS X}
+On Mac OS X, \cvmfs\ is based on \fusex\footnote{\url{http://fuse4x.github.com}}. 
+It is not yet integrated with \autofs.
+In order to install, proceed according to the following steps:
+\begin{description}
+	\item[Step 1] Install the \cvmfs\ package by opening the .pkg file.
+	\item[Step 2] Create /etc/cvmfs/default.local and open the file for editing.
+	\item[Step 3] Select the desired repositories by setting \texttt{CVMFS\_REPOSITORIES=repo1,repo2,...}.
+		For CMS, for instance, set 
+\begin{verbatim}
+  CVMFS_REPOSITORIES=cms.cern.ch
+\end{verbatim}
+		Specify the HTTP proxy servers on your site with
+\begin{verbatim}
+  CVMFS_HTTP_PROXY="http://myproxy1:port|http://myproxy2:port"
+\end{verbatim}
+	If you're unsure about the proxy names, set \texttt{CVMFS\_HTTP\_PROXY=DIRECT}.
+    \item[Step 4] Mount your repositories like
+\begin{verbatim} 
+  sudo mkdir -p /cvmfs/cms.cern.ch
+  sudo mount -t cvmfs cms.cern.ch /cvmfs/cms.cern.ch
+\end{verbatim}
 \end{description}
 
 \section{Usage}
 The \cvmfs\ repositories are located under /cvmfs.
-Each repository is identified by a \indexed{fully qualified repository name}.
-That is a repository identifier and a domain name, similar to DNS~\cite{rfc1035}.
+Each repository is identified by a \emph{fully qualified repository name}.
+The fully qualified repository name consists of a repository identifier and a domain name, similar to DNS records~\cite{rfc1035}.
 The domain part of the fully qualified repository name indicates the location of repository creation and maintenance.
-For the ATLAS experiment software, for instance, the fully qualified repository name is atlas.cern.ch.
+For the ATLAS experiment software, for instance, the fully qualified repository name is atlas.cern.ch although the hosting web servers are spread around the world.
 
-Mounting and un-mounting of the \cvmfs\ is controlled by \product{autofs} and \product{automount}.
+Mounting and un-mounting of the \cvmfs\ is controlled by \autofs\ and \product{automount}.
 That is, starting from the base directory /cvmfs different repositories are mounted automatically just by accessing them.
-For instance, running the command \lstinline{ls /cvmfs/atlas.cern.ch} will mount the ATLAS software repository.
+For instance, running the command \texttt{ls /cvmfs/atlas.cern.ch} will mount the ATLAS software repository.
 This directory gets automatically unmounted after some \product{automount}-defined idle time.
-
-Usually, some additional configuration is necessary to make the software of a certain repository run properly.
-This includes symbolic links from /opt/\emph{repository} to /cvmfs/\emph{repository}.cern.ch.
-The extra configuration is done by the cvmfs service.
 
 \section{Debugging Hints}
 
 In order to check for common misconfigurations in the base setup, run
-\begin{lstlisting}[language=bash]
-cvmfs_config chksetup
-\end{lstlisting}
+\begin{verbatim}
+  cvmfs_config chksetup
+\end{verbatim}
 
-\cvmfs\ gathers its configuration parameter from different configration files (default, domain specific, local setup, \dots).  
+\cvmfs\ gathers its configuration parameter from various configuration files that can overwrite each others settings (default configuration, domain specific configuration, local setup, \dots).  
 To show the effective configuration for \emph{repository}.cern.ch, run
-\begin{lstlisting}[language=bash]
-cvmfs_config showconfig repository.cern.ch
-\end{lstlisting}
+\begin{verbatim}
+  cvmfs_config showconfig repository.cern.ch
+\end{verbatim}
 
 In order to exclude \product{autofs}/\product{automounter} as a source of problems, you can try to mount \emph{repository}.cern.ch manually by
-\begin{lstlisting}[language=bash]
-mkdir /mnt/cvmfs
-mount -t cvmfs repository.cern.ch /mnt/cvmfs
-\end{lstlisting}
+\begin{verbatim}
+  mkdir -p /mnt/cvmfs
+  mount -t cvmfs repository.cern.ch /mnt/cvmfs
+\end{verbatim}
+
+In order to exclude SELinux as a source of problems, you can try mounting after SELinux has been disabled by
+\begin{verbatim}
+  /usr/sbin/setenforce 0
+\end{verbatim}
 
 Once you sorted out a problem, make sure that you do not get the original error served from the file system buffers by
-\begin{lstlisting}[language=bash]
-service cvmfs restartautofs
-\end{lstlisting}
+\begin{verbatim}
+  service autofs restart
+\end{verbatim}
 
-
-In case you need additional help, please don't hesitate to contact us at \url{cernvm.support@cern.ch}.
+In case you need additional assistance, please don't hesitate to contact us at \url{cernvm.support@cern.ch}.
 Together with the problem description, please send the system information tarball created by \texttt{cvmfs\_config bugreport}.
-
-
-
